client/src/index.css
html {
  background-color: rgb(248, 248, 248);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.change-positive {
  color: green;
}

.change-negative {
  color: red
}

.coins-container {
  margin: auto;
  max-width: 750px;
  padding: 20px;
}

/*
.coin {
  background-color: white;
  max-width: 1000px;
  border-radius: 50px;
  margin: 25px auto;
  font-size: small;
  align-items: center;
  display: flex;
  flex-direction: row;
}

.coin * {
  margin: auto;
}

.coin .icon {
  margin-left: 0;
}
*/

.coin .profile-container {
  margin-left: 0;
  display: flex;
  flex-direction: row;
}

.coin .name-symbol-container {
  display: flex;
  flex-direction: column;
  margin-left: 4vw;
  text-align: left;
}

.coin .symbol {
  color: #777474;
  margin-left: 0;
}

.coin button {
  border: none;
}

td, th {
  border-bottom: 1px solid rgb(190, 190, 190);
  padding: 10px;
}

td {
  text-align: center;
}

/*
tr:nth-child(even) {
}
*/

caption {
  padding: 10px;
  caption-side: bottom;
}

table {
  border-collapse: collapse;
  /*border: 2px solid rgb(200, 200, 200);*/
  letter-spacing: 1px;
  font-family: sans-serif;
  font-size: .8rem;
}

.drop-down * {
  visibility: hidden;
}

.drop-down:active {
  visibility: visible;
}

.sort-indicator {
  color: blue;
}

.descending::after {
  content: " ▼";
}

.ascending::after {
  content: " ▲";
}

